<code> modify Criteria utils